--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -142,9 +142,9 @@ img.portfolio_images.oneflowtwo {
 	padding-top: 1%;
 	margin-left: auto;
 	margin-right: auto;
-	animation: blakesdotcomonefirst ease-in-out 16s infinite;
+	animation: blakesdotcomonefirstb ease-in-out 16s infinite;
 }
-@-webkit-keyframes blakesdotcomonefirst {
+@-webkit-keyframes blakesdotcomonefirstb {
 	0% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
 	45% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
 	46% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
@@ -152,7 +152,7 @@ img.portfolio_images.oneflowtwo {
 	98% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
 	100% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
 }
-@keyframes blakesdotcomonefirst {
+@keyframes blakesdotcomonefirstb {
 	0% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
 	45% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
 	46% {transition: opacity 0, display 2s; opacity: 0; display: none;}
@@ -174,20 +174,20 @@ img.portfolio_images.twoflowtwo, video.portfolio_images.twoflowtwo  {
 	animation: blakesdotcomtwosecondb ease-in-out 16s infinite;
 }
 @-webkit-keyframes blakesdotcomtwosecondb {
-	0% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none; background: linear-gradient(#2A9243, #9198e5);}
-	46% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none; background: linear-gradient(#2A9243, #9198e5);}
-	47% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit; background: linear-gradient(#2A9243, #9198e5);}
-	96% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit; background: linear-gradient(#2A9243, #9198e5);}
-	97% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none; background: linear-gradient(#2A9243, #9198e5);}
-	100% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none; background: linear-gradient(#2A9243, #9198e5);}
+	0% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
+	46% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
+	47% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+	96% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+	97% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
+	100% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
 }
 @keyframes blakesdotcomtwosecondb {
-	0% {transition: opacity 0, display 2s; opacity: 0; display: none; background: linear-gradient(#2A9243, #9198e5);}
-	46% {transition: opacity 0, display 2s; opacity: 0; display: none; background: linear-gradient(#2A9243, #9198e5);}
-	47% {transition: opacity 1, display 2s; opacity: 1; display: inherit; background: linear-gradient(#2A9243, #9198e5);}
-	96% {transition: opacity 1, display 2s; opacity: 1; display: inherit; background: linear-gradient(#2A9243, #9198e5);}
-	97% {transition: opacity 0, display 2s; opacity: 0; display: none; background: linear-gradient(#2A9243, #9198e5);}
-	100% {transition: opacity 0, display 2s; opacity: 0; display: none; background: linear-gradient(#2A9243, #9198e5);}
+	0% {transition: opacity 0, display 2s; opacity: 0; display: none;}
+	46% {transition: opacity 0, display 2s; opacity: 0; display: none;}
+	47% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+	96% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+	97% {transition: opacity 0, display 2s; opacity: 0; display: none;}
+	100% {transition: opacity 0, display 2s; opacity: 0; display: none;}
 }
 
 img.portfolio_images.blakesdotcomone {
@@ -1395,6 +1395,66 @@ label.menu__btn {
 		97% {display: none;}
 		100% {display: none;}
 	}
+
+	img.portfolio_images.oneflowtwo {
+		position: relative;
+		width: 100%;
+		height: auto;
+		display: inherit;
+		transform: scale(1.03);
+		height: auto;
+		opacity: inherit;
+		padding-top: 1%;
+		margin-left: auto;
+		margin-right: auto;
+		animation: blakesdotcomonefirstbphone ease-in-out 16s infinite;
+	}
+	@-webkit-keyframes blakesdotcomonefirstbphone {
+		0% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+		45% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+		46% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
+		97% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
+		98% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+		100% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+	}
+	@keyframes blakesdotcomonefirstbphone {
+		0% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+		45% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+		46% {transition: opacity 0, display 2s; opacity: 0; display: none;}
+		97% {transition: opacity 0, display 2s; opacity: 0; display: none;}
+		98% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+		100% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+	}
+
+	img.portfolio_images.twoflowtwo, video.portfolio_images.twoflowtwo  {
+		position: relative;
+		display: inherit;
+		width: 100%;
+		height: auto;
+		transform: scale(1.03);
+		height: auto;
+		padding-top: 1%;
+		margin-left: auto;
+		margin-right: auto;
+		animation: blakesdotcomtwosecondbphone ease-in-out 16s infinite;
+	}
+	@-webkit-keyframes blakesdotcomtwosecondbphone {
+		0% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
+		46% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
+		47% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+		96% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+		97% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
+		100% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
+	}
+	@keyframes blakesdotcomtwosecondbphone {
+		0% {transition: opacity 0, display 2s; opacity: 0; display: none;}
+		46% {transition: opacity 0, display 2s; opacity: 0; display: none;}
+		47% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+		96% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+		97% {transition: opacity 0, display 2s; opacity: 0; display: none;}
+		100% {transition: opacity 0, display 2s; opacity: 0; display: none;}
+	}
+
 
 	img.portfolio_images_pop {
 	display: block;
