--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -135,7 +135,6 @@ img.portfolio_images.oneflowtwo {
 	position: relative;
 	width: 100%;
 	height: auto;
-	display: inherit;
 	transform: scale(1.03);
 	height: auto;
 	opacity: inherit;
@@ -145,20 +144,20 @@ img.portfolio_images.oneflowtwo {
 	animation: blakesdotcomonefirstb ease-in-out 16s infinite;
 }
 @-webkit-keyframes blakesdotcomonefirstb {
-	0% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-	45% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+	0% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: block;}
+	45% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: block;}
 	46% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
 	97% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
-	98% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-	100% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+	98% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: block;}
+	100% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: block;}
 }
 @keyframes blakesdotcomonefirstb {
-	0% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-	45% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+	0% {transition: opacity 1, display 2s; opacity: 1; display: block;}
+	45% {transition: opacity 1, display 2s; opacity: 1; display: block;}
 	46% {transition: opacity 0, display 2s; opacity: 0; display: none;}
 	97% {transition: opacity 0, display 2s; opacity: 0; display: none;}
-	98% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-	100% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+	98% {transition: opacity 1, display 2s; opacity: 1; display: block;}
+	100% {transition: opacity 1, display 2s; opacity: 1; display: block;}
 }
 
 img.portfolio_images.twoflowtwo, video.portfolio_images.twoflowtwo  {
@@ -176,16 +175,16 @@ img.portfolio_images.twoflowtwo, video.portfolio_images.twoflowtwo  {
 @-webkit-keyframes blakesdotcomtwosecondb {
 	0% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
 	46% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
-	47% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-	96% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+	47% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: block;}
+	96% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: block;}
 	97% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
 	100% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
 }
 @keyframes blakesdotcomtwosecondb {
 	0% {transition: opacity 0, display 2s; opacity: 0; display: none;}
 	46% {transition: opacity 0, display 2s; opacity: 0; display: none;}
-	47% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-	96% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+	47% {transition: opacity 1, display 2s; opacity: 1; display: block;}
+	96% {transition: opacity 1, display 2s; opacity: 1; display: block;}
 	97% {transition: opacity 0, display 2s; opacity: 0; display: none;}
 	100% {transition: opacity 0, display 2s; opacity: 0; display: none;}
 }
