--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -144,20 +144,20 @@ img.portfolio_images.oneflowtwo {
 	animation: blakesdotcomonefirstb ease-in-out 16s infinite;
 }
 @-webkit-keyframes blakesdotcomonefirstb {
-	0% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: block;}
-	45% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: block;}
+	0% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inline-block;;}
+	45% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inline-block;}
 	46% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
 	97% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
-	98% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: block;}
-	100% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: block;}
+	98% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inline-block;}
+	100% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inline-block;}
 }
 @keyframes blakesdotcomonefirstb {
-	0% {transition: opacity 1, display 2s; opacity: 1; display: block;}
-	45% {transition: opacity 1, display 2s; opacity: 1; display: block;}
+	0% {transition: opacity 1, display 2s; opacity: 1; display: inline-block;}
+	45% {transition: opacity 1, display 2s; opacity: 1; display: inline-block;}
 	46% {transition: opacity 0, display 2s; opacity: 0; display: none;}
 	97% {transition: opacity 0, display 2s; opacity: 0; display: none;}
-	98% {transition: opacity 1, display 2s; opacity: 1; display: block;}
-	100% {transition: opacity 1, display 2s; opacity: 1; display: block;}
+	98% {transition: opacity 1, display 2s; opacity: 1; display: inline-block;}
+	100% {transition: opacity 1, display 2s; opacity: 1; display: inline-block;}
 }
 
 img.portfolio_images.twoflowtwo, video.portfolio_images.twoflowtwo  {
@@ -175,16 +175,16 @@ img.portfolio_images.twoflowtwo, video.portfolio_images.twoflowtwo  {
 @-webkit-keyframes blakesdotcomtwosecondb {
 	0% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
 	46% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
-	47% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: block;}
-	96% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: block;}
+	47% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inline-block;}
+	96% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inline-block;}
 	97% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
 	100% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
 }
 @keyframes blakesdotcomtwosecondb {
 	0% {transition: opacity 0, display 2s; opacity: 0; display: none;}
 	46% {transition: opacity 0, display 2s; opacity: 0; display: none;}
-	47% {transition: opacity 1, display 2s; opacity: 1; display: block;}
-	96% {transition: opacity 1, display 2s; opacity: 1; display: block;}
+	47% {transition: opacity 1, display 2s; opacity: 1; display: inline-block;}
+	96% {transition: opacity 1, display 2s; opacity: 1; display: inline-block;}
 	97% {transition: opacity 0, display 2s; opacity: 0; display: none;}
 	100% {transition: opacity 0, display 2s; opacity: 0; display: none;}
 }
