--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -1325,6 +1325,7 @@ label.menu__btn {
   opacity: 1;
   padding-left: 10%;
 	padding-right: 10%;
+	padding-top: 10%;
   margin-top: 10%;
   margin-bottom:2%;
   text-align: left;
@@ -1396,13 +1397,11 @@ label.menu__btn {
 	}
 
 	img.portfolio_images.oneflowtwo {
-		position: relative;
+		position: absolute;
 		width: 100%;
 		height: auto;
-		display: inherit;
 		transform: scale(1.03);
 		height: auto;
-		float: inherit;
 		opacity: inherit;
 		padding-top: 1%;
 		margin-left: auto;
@@ -1410,20 +1409,20 @@ label.menu__btn {
 		animation: blakesdotcomonefirstbphone ease-in-out 16s infinite;
 	}
 	@-webkit-keyframes blakesdotcomonefirstbphone {
-		0% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-		45% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-		46% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
-		97% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
-		98% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-		100% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+		0% {opacity: 1; -webkit-float: left;}
+		45% {opacity: 1; -webkit-float: left;}
+		46% {opacity: 0; -webkit-float: left;}
+		97% {opacity: 0; -webkit-float: left;}
+		98% {opacity: 1; -webkit-float: left;}
+		100% {opacity: 1; -webkit-float: left;}
 	}
 	@keyframes blakesdotcomonefirstbphone {
-		0% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-		45% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-		46% {transition: opacity 0, display 2s; opacity: 0; display: none;}
-		97% {transition: opacity 0, display 2s; opacity: 0; display: none;}
-		98% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-		100% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
+		0% {opacity: 1; float: left;}
+		45% {opacity: 1; float: left;}
+		46% {opacity: 0; float: left;}
+		97% {opacity: 0; float: left;}
+		98% {opacity: 1; float: left;}
+		100% {opacity: 1; float: left;}
 	}
 
 	img.portfolio_images.twoflowtwo, video.portfolio_images.twoflowtwo  {
@@ -1433,27 +1432,26 @@ label.menu__btn {
 		height: auto;
 		transform: scale(1.03);
 		height: auto;
-		float: inherit;
 		padding-top: 1%;
 		margin-left: auto;
 		margin-right: auto;
 		animation: blakesdotcomtwosecondbphone ease-in-out 16s infinite;
 	}
 	@-webkit-keyframes blakesdotcomtwosecondbphone {
-		0% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
-		46% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
-		47% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-		96% {-webkit-transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-		97% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
-		100% {-webkit-transition: opacity 0, display 2s; opacity: 0; display: none;}
+		0% {opacity: 0; -webkit-float: left;}
+		46% {opacity: 0; -webkit-float: left;}
+		47% {opacity: 1; -webkit-float: left;}
+		96% {opacity: 1; -webkit-float: left;}
+		97% {opacity: 0; -webkit-float: left;}
+		100% {opacity: 0; -webkit-float: left;}
 	}
 	@keyframes blakesdotcomtwosecondbphone {
-		0% {transition: opacity 0, display 2s; opacity: 0; display: none;}
-		46% {transition: opacity 0, display 2s; opacity: 0; display: none;}
-		47% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-		96% {transition: opacity 1, display 2s; opacity: 1; display: inherit;}
-		97% {transition: opacity 0, display 2s; opacity: 0; display: none;}
-		100% {transition: opacity 0, display 2s; opacity: 0; display: none;}
+		0% {opacity: 0; float: left;}
+		46% {opacity: 0; float: left;}
+		47% {opacity: 1; float: left;}
+		96% {opacity: 1; float: left;}
+		97% {opacity: 0; float: left;}
+		100% {opacity: 0; float: left;}
 	}
 
 
